# stockpilot

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh.md  CLAUDE.md  INSTALL.md  PRODUCT_DESIGN.md  PRODUCT_DESIGN.zh.md  README.md  SKILL.md  pyproject.toml  tmp_debug_002149.py
.github/workflows/: t0-assistant.yml
apps/chan-streamlit/: AGENTS.md  README.md  app.py  test_app.py  ui_text.py
apps/chan-viewer/: AGENTS.md  README.md  app.py  ui_text.py
apps/fundamental-screener/: README.md  app.py
apps/t0-assistant/: README.md  package-lock.json  package.json
assets/config_templates/: china-stock-daily-tracker.example.json  stockpilot.example.json
chantheory/: __init__.py
docs/: PRODUCT_DESIGN.md  PRODUCT_DESIGN.zh.md  chan_theory_v0.1.md  fundamental_screener_mvp.md  fundamental_screener_phase_plan.md  fundamental_screener_streamlit_frontend_plan.md  phase2_tasks.md  product_design.md  product_design.zh.md  software_technical_document.zh.md  stock_technical_concepts.zh.md  tencent_api_data_limits.md
docs/adr/: 0001-modular-monolith.md  0002-packages-own-domain-logic.md  0003-local-sqlite-runtime-boundary.md  0004-schema-first-analysis-contracts.md  0005-t0-chart-engine-and-logical-time-axis.md  0006-electron-managed-python-process.md  0007-local-python-transport.md  0008-czsc-update-and-rebuild-strategy.md  README.md
docs/architecture/: c4-container.md  c4-context.md  (+3 more)
fundamentalscreener/: __init__.py
marketdata/: __init__.py
scripts/: generate_report.py
stockpilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+152 files in other folders)
